--- a/scss/main.scss
+++ b/scss/main.scss
@@ -29,14 +29,19 @@ body {
   margin-top: 30px;
   input {
     &:focus {
-      border: 1px solid #29AC00;
+      border: 2px solid #29AC00;
       padding: 0 10px;
+      transition: 1s;
     }
     height: 50px;
     width: 230px;
     padding: 0 10px;
   }
   textarea {
+    &:focus {
+      border: 2px solid #29AC00;
+      transition: 1s;
+    }
     margin-top: 30px;
     padding: 10px;
     margin-bottom: 20px;
