--- a/scss/main.scss
+++ b/scss/main.scss
@@ -54,3 +54,20 @@ body {
     border: 1px solid #29AC00;
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .judul {
+    h3 {
+      font-size: 16px;
+      span {
+        font-size: 20px;
+      }
+    }
+  }
+
+  .input {
+    textarea {
+      width: 20em;
+    }
+  }
+}
